--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: breeze
+title: MustWin
 subtitle: ''
 description: ''
 keywords:
-author: WYh
+author: Nrui
 language: zh-CN
 timezone: Asia/Shanghai
 
