--- a/themes/ayer/_config.yml
+++ b/themes/ayer/_config.yml
@@ -32,7 +32,7 @@ logo: /favicon.ico
 cover:
   enable: true
   path: /images/123.jpg # /source/images目录下附送多张美图，可更换
-  logo: true #/images/ayer.svg，如果不要直接设置成false
+  logo: false #/images/ayer.svg，如果不要直接设置成false
 
 # 页面顶部进度条
 progressBar: true
@@ -113,7 +113,7 @@ mouse:
   path: /images/mouse.cur
 
 # 鼠标点击效果：0-关闭，1-爱心，2-爆炸烟花，3-粒子烟花
-click_effect: 0
+click_effect: 3
 
 # 页面宽度自定义（不建议修改，可能造成布局混乱），article_width文章宽度，sidebar_width侧边栏宽度
 layout:
@@ -200,7 +200,7 @@ friends_link:
     img: /images/hexo-tag-chart.png
 
 # 评论：1、Valine(推荐)；2、Gitalk；3、Twikoo;
-
+s
 # 1、Valine[一款快速、简洁且高效的无后端评论系统](https://github.com/xCss/Valine)
 # 启用Valine必须先创建leancloud应用， 获取 id|key 填入即可
 leancloud:
