--- a/themes/ayer/_config.yml
+++ b/themes/ayer/_config.yml
@@ -5,7 +5,7 @@ menu:
   学习: /categories
   工作：/categories
   标签: /tags
-  旅行: /tags/旅行/
+  # 旅行: /tags/旅行/
   摄影: http://shenyu-vip.lofter.com
   #  友链: /friends
   # 关于我: /2019/about
