--- a/themes/ayer/_config.yml
+++ b/themes/ayer/_config.yml
@@ -3,8 +3,8 @@ menu:
   主页: /
   # C++: /archives
   学习: /categories
-  工作：/categories
-  标签: /tags
+  # 工作：/categories
+  # 标签: /tags
   # 旅行: /tags/旅行/
   # 摄影: http://shenyu-vip.lofter.com
   #  友链: /friends
