--- a/themes/ayer/_config.yml
+++ b/themes/ayer/_config.yml
@@ -3,9 +3,9 @@ menu:
   主页: /
   # C++: /archives
   分类: /categories
-  # 标签: /tags
-#  旅行: /tags/旅行/
-#  摄影: http://shenyu-vip.lofter.com
+  标签: /tags
+  旅行: /tags/旅行/
+  摄影: http://shenyu-vip.lofter.com
 #  友链: /friends
   # 关于我: /2019/about
 
